--- a/css/style.css
+++ b/css/style.css
@@ -620,7 +620,7 @@
 
 		#banner-wrapper .inner
 		{
-			background: url('../images/banner.jpg');
+			background: url('../images/sunset_summer.png');
 			background-size: cover;
 		}
 
