further resizing of .face img to improve interface on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -911,7 +911,9 @@
     /*}*/
 
     .face img {
-        height: 293px;
-        width: 320px;
+        /*height: 293px;*/
+        /*width: 320px;*/
+        height: 275px;
+        width: 300px;
     }
 }
